src/objects/Ter_Acta_Encuesta__c.object
<CustomObject>
    <fields>
        <fullName>Ter_Puntaje_Despachadores__c</fullName>
        <description>Este campo contiene el puntaje despachadores de la EDS.</description>
        <formula>IF(ISPICKVAL(Portan_despachadores_uniforme_completo__c, &quot;Si&quot;), 0.10, 0) + 
IF(ISPICKVAL(Se_encuentran_uniformes_en_buen_estado__c, &quot;Si&quot;), 0.10, 0) + 
IF(ISPICKVAL(El_saludo_inicial_y_despedida_amable__c, &quot;Si&quot;), 0.10, 0) + 
IF(ISPICKVAL(Ofrece_despachador_limpieza_de_vidrios__c, &quot;Si&quot;), 0.10, 0) + 
IF(ISPICKVAL(Permanece_el_despachador_en_la_isla__c, &quot;Si&quot;), 0.10, 0) + 
IF(ISPICKVAL(Despachadores_divulgan_las_campa_as__c, &quot;Si&quot;), 0.10, 0) + 
IF(ISPICKVAL(Entrega_recibo_al_final_del_servicio__c, &quot;Si&quot;), 0.10, 0) + 
IF(ISPICKVAL(Baja_denominaci_n_cambiar_billetes__c, &quot;Si&quot;), 0.10, 0) + 
IF(ISPICKVAL(Despachador_atento_durante_operaci_n__c, &quot;Si&quot;), 0.10, 0) + 
IF(ISPICKVAL(El_despachador_cuidadoso_con_veh_culo__c, &quot;Si&quot;), 0.10, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Puntaje Despachadores</inlineHelpText>
        <label>Puntaje Despachadores</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ter_Puntaje_Varios__c</fullName>
        <description>Este campo contiene el puntaje varios de la EDS.</description>
        <formula>IF(ISPICKVAL(El_n_mero_de_despachadores_en_la_EDS__c, &quot;Si&quot;), 0.10, 0) + 
IF(ISPICKVAL(Existe_extintor_en_distintas_reas_EDS__c, &quot;Si&quot;), 0.10, 0) + 
IF(ISPICKVAL(Presi_n_de_EDS_es_la_exigida_por_ley__c, &quot;Si&quot;), 0.10, 0) + 
IF(ISPICKVAL(Zonas_de_riesgo_libres_de_obst_culos__c, &quot;Si&quot;), 0.10, 0) + 
IF(ISPICKVAL(Vendedores_ambulantes_alejados_de_EDS__c, &quot;Si&quot;), 0.10, 0) + 
IF(ISPICKVAL(Presenta_PVP_actualizado__c, &quot;Si&quot;), 0.10, 0) + 
IF(ISPICKVAL(Despachadores_capacitados_en_el_CBT__c, &quot;Si&quot;), 0.10, 0) + 
IF(ISPICKVAL(Se_encuentran_los_sellos_instalados__c, &quot;Si&quot;), 0.10, 0) + 
IF(ISPICKVAL(POS_e_impresoras_funcionando__c, &quot;Si&quot;), 0.10, 0) + 
IF(ISPICKVAL(Lubricantes_l_quidos_buena_exhibici_n__c, &quot;Si&quot;), 0.10, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Puntaje Varios</inlineHelpText>
        <label>Puntaje Varios</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ter_Puntaje_total_EDS__c</fullName>
        <formula>((Ter_Puntaje_Aspectos_fisicos_EDS__c) + (Ter_Puntaje_Despachadores__c) + (Ter_Puntaje_Varios__c))/3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Puntaje total EDS</inlineHelpText>
        <label>Puntaje total EDS</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ter_Solicitante__c</fullName>
        <formula>Ter_nombre_de_cliente__r.Ter_Codigo_Solicitante__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Solicitante</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Solidos_en_trampa_de_grasas__c</fullName>
        <inlineHelpText>¿No hay presencia de sólidos, residuos y nata de combustible?</inlineHelpText>
        <label>Sólidos en TdeGr ZC y caja toma muestras</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_Trampa_de_grasas_zona_combustibles__c</fullName>
        <inlineHelpText>¿Verificar la existencia de trampa de grasas y  correcta funcionalidad?</inlineHelpText>
        <label>Tr de grasas zona comb y caja toma muest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ter_Ventas__c</fullName>
        <label>Ventas</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ter_nombre_de_cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Este campo contiene la relación entre el cliente y las actividades de tipo acta.</description>
        <label>Nombre de cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Actas/Encuestas</relationshipLabel>
        <relationshipName>Actas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valvula_de_impacto__c</fullName>
        <inlineHelpText>¿Existe válvula de impacto sujeta a la barra estabilizadora del equipo?</inlineHelpText>
        <label>Valvula de impacto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cumple</fullName>
                </value>
                <value>
                    <fullName>No Cumple</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendedores_ambulantes_alejados_de_EDS__c</fullName>
        <inlineHelpText>¿Se encuentran lo vendedores ambulantes alejados de la EDS?</inlineHelpText>
        <label>¿Vendedores ambulantes alejados de EDS?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zona__c</fullName>
        <label>Zona</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zonas_de_riesgo_libres_de_obst_culos__c</fullName>
        <inlineHelpText>¿Se encuentran las zonas de riesgo libres de obstáculos?</inlineHelpText>
        <label>¿Zonas de riesgo libres de obstáculos?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>buena_se_alizaci_n_promocional_de_marke__c</fullName>
        <inlineHelpText>¿ Existe señalización para las áreas fuera de servicio?</inlineHelpText>
        <label>¿Existe señalización para las áreas?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Acta/Encuesta</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Ter_nombre_de_cliente__c</columns>
        <columns>Ter_Nombre_EDS__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>Ter_Acta_Aviacion</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Ter_nombre_de_cliente__c</columns>
        <columns>Ter_Nombre_EDS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ter_Acta_Encuesta__c.Acta_Aviacion</value>
        </filters>
        <label>Acta Aviación</label>
    </listViews>
    <listViews>
        <fullName>Ter_Acta_Bitacora_Ambiental_GA</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Ter_nombre_de_cliente__c</columns>
        <columns>Ter_Nombre_EDS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ter_Acta_Encuesta__c.Acta_Bit_cora_Ambiental_GA</value>
        </filters>
        <label>Acta Bitácora Ambiental GA</label>
    </listViews>
    <listViews>
        <fullName>Ter_Acta_Marinos</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Ter_nombre_de_cliente__c</columns>
        <columns>Ter_Nombre_EDS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ter_Acta_Encuesta__c.Acta_Marinos</value>
        </filters>
        <label>Acta Marinos</label>
    </listViews>
    <listViews>
        <fullName>Ter_Acta_Seguimiento_Comercial_EDS</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Ter_nombre_de_cliente__c</columns>
        <columns>Ter_Nombre_EDS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ter_Acta_Encuesta__c.Acta_Seguimiento_Comercial_EDS</value>
        </filters>
        <label>Acta Seguimiento Comercial EDS</label>
    </listViews>
    <listViews>
        <fullName>Ter_Acta_Seguimiento_Comercial_GNV</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Ter_nombre_de_cliente__c</columns>
        <columns>Ter_Nombre_EDS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ter_Acta_Encuesta__c.Acta_Seguimiento_Comercial_GNV</value>
        </filters>
        <label>Acta Seguimiento Comercial GNV</label>
    </listViews>
    <listViews>
        <fullName>Ter_Acta_Seguimiento_Comercial_Industria</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Ter_nombre_de_cliente__c</columns>
        <columns>Ter_Nombre_EDS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ter_Acta_Encuesta__c.Acta_Seguimiento_Comercial_Industria</value>
        </filters>
        <label>Acta Seguimiento Comercial Industria</label>
    </listViews>
    <listViews>
        <fullName>Ter_Acta_Seguimiento_Comercial_Lubes</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Ter_nombre_de_cliente__c</columns>
        <columns>Ter_Nombre_EDS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ter_Acta_Encuesta__c.Acta_Seguimiento_Comercial_Lubes</value>
        </filters>
        <label>Acta Seguimiento Comercial Lubes</label>
    </listViews>
    <listViews>
        <fullName>Ter_Acta_Seguimiento_Comercial_Rumbo</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Ter_nombre_de_cliente__c</columns>
        <columns>Ter_Nombre_EDS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ter_Acta_Encuesta__c.Acta_Seguimiento_Comercial_Rumbo</value>
        </filters>
        <label>Acta Seguimiento Comercial Rumbo</label>
    </listViews>
    <listViews>
        <fullName>Ter_Acta_Seguimiento_Mensual_GNV</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Ter_nombre_de_cliente__c</columns>
        <columns>Ter_Nombre_EDS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ter_Acta_Encuesta__c.Acta_Seguimiento_Mensual_GNV</value>
        </filters>
        <label>Acta Seguimiento Mensual GNV</label>
    </listViews>
    <listViews>
        <fullName>Ter_Encuesta</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Ter_nombre_de_cliente__c</columns>
        <columns>Ter_Nombre_EDS__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Ter_Acta_Encuesta__c.Encuesta</value>
        </filters>
        <label>Encuesta</label>
    </listViews>
    <listViews>
        <fullName>Ter_Mis_Actas</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Ter_nombre_de_cliente__c</columns>
        <columns>Ter_Nombre_EDS__c</columns>
        <filterScope>Everything</filterScope>
        <label>Mis Actas</label>
    </listViews>
    <nameField>
        <displayFormat>AC-{0000}-{YYYY}{MM}{DD}</displayFormat>
        <label>Código visita</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actas/Encuestas</pluralLabel>
    <recordTypes>
        <fullName>Acta_Aviacion</fullName>
        <active>true</active>
        <description>Este tipo de registro contiene las actas del negocio Aviación.</description>
        <label>Acta Aviación</label>
    </recordTypes>
    <recordTypes>
        <fullName>Acta_Bit_cora_Ambiental_GA</fullName>
        <active>true</active>
        <description>Este tipo de registro contiene las actas del negocio EDS - Bitácora Ambiental.</description>
        <label>Acta Bitácora Ambiental GA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Acta_Marinos</fullName>
        <active>true</active>
        <description>Este tipo de registro contiene las actas del negocio Marinos.</description>
        <label>Acta Marinos</label>
    </recordTypes>
    <recordTypes>
        <fullName>Acta_Seguimiento_Comercial_EDS</fullName>
        <active>true</active>
        <description>Este tipo de registro contienen las actas del negocio EDS - Seguimiento Comercial EDS.</description>
        <label>Acta Seguimiento Comercial EDS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Acta_Seguimiento_Comercial_GNV</fullName>
        <active>true</active>
        <description>Este tipo de registro contiene las actas del negocio GNV - Seguimiento Comercial GNV.</description>
        <label>Acta Seguimiento Comercial GNV</label>
    </recordTypes>
    <recordTypes>
        <fullName>Acta_Seguimiento_Comercial_Industria</fullName>
        <active>true</active>
        <description>Este tipo de registro contiene las actas del negocio Industria - Seguimiento Comercial Industria.</description>
        <label>Acta Seguimiento Comercial Industria</label>
    </recordTypes>
    <recordTypes>
        <fullName>Acta_Seguimiento_Comercial_Lubes</fullName>
        <active>true</active>
        <description>Este tipo de registro contiene las actas del negocio Lubricantes - Seguimiento Comercial Lubricantes.</description>
        <label>Acta Seguimiento Comercial Lubes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Acta_Seguimiento_Comercial_Rumbo</fullName>
        <active>true</active>
        <description>Este tipo de registro contiene las actas del negocio Rumbo - Seguimiento Comercial Rumbo.</description>
        <label>Acta Seguimiento Comercial Rumbo</label>
    </recordTypes>
    <recordTypes>
        <fullName>Acta_Seguimiento_Mensual_GNV</fullName>
        <active>true</active>
        <description>Este tipo de registro contiene las actas del negocio EDS - Seguimiento Mensual GNV.</description>
        <label>Acta Seguimiento Mensual GNV</label>
    </recordTypes>
    <recordTypes>
        <fullName>Encuesta</fullName>
        <active>true</active>
        <description>Este tipo de registro contiene las encuestas generadas desde un caso.</description>
        <label>Encuesta</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>TER_ACT_001_Valida_propietario</fullName>
        <active>true</active>
        <description>Esta regla valida que el campo propietario no se modifique por algunos perfiles.</description>
        <errorConditionFormula>AND( 
ISCHANGED(OwnerId), 
$Profile.Name &lt;&gt; &quot;Administrador del sistema&quot;, 
$Profile.Name &lt;&gt; &quot;Administrador Funcional Plataforma&quot;, 
$Profile.Name &lt;&gt; &quot;Administrador Técnico Plataforma&quot;, 
$Profile.Name &lt;&gt; &quot;Administrador Funcional Comercial&quot; 
)</errorConditionFormula>
        <errorMessage>TER-ACT-001: Su perfil no permite modificar el propietario.</errorMessage>
    </validationRules>
</CustomObject>